k8s/ingress/coit-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coit-frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: basil.com.34-100-224-46.sslip.io
    http:
      paths:
      - path: /frontend
        pathType: Prefix
        backend:
          service:
            name: coit-frontend-lb
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: coit-backend1-lb
            port:
              number: 80
