k8s/ingress/ingress-backend1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coit-backend1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: api.basil.com.34-100-224-46.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: coit-backend1-lb
            port:
              number: 80
